--- a/source/sass/base/container.scss
+++ b/source/sass/base/container.scss
@@ -3,11 +3,21 @@
   // border: 1px solid #00ff00;
   width: 100%;
   margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 16px;
+  padding-right: 16px;
 
-  @include media-tablet {
-    padding-left: 50px;
-    padding-right: 50px;
+  @include media-mobile2 {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+    @include media-tablet {
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+
+  @include media-desktop {
+    padding-left: 120px;
+    padding-right: 120px;
   }
 }
