--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,7 +8,12 @@
 @import "./base/fonts-styles.scss";
 @import "./base/visually-hidden";
 @import "./base/container.scss";
+@import "./base/page.scss";
+
 // @import "./base/visible.scss";
 // @import "./base/no-js.scss";
 
 // BLOCKS
+@import "./blocks/header.scss";
+@import "./blocks/blog.scss";
+@import "./blocks/tags.scss";
