--- a/source/sass/base/fonts-styles.scss
+++ b/source/sass/base/fonts-styles.scss
@@ -2,6 +2,7 @@
   /* h1 */
   @include font ($size: 24px, $line-height: 32px, $weight: 600);
 
+
   @include media-mobile2 {
     @include font ($size: 32px, $line-height: 40px, $weight: 600);
   }
@@ -39,6 +40,7 @@
 .text-nav {
   @include font ($size: 14px, $line-height: 114%, $weight: 500);
   $letter-spacing: 0.025em;
+  text-decoration: none;
 }
 
 .text-btn-psih {
