--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -27,6 +27,8 @@ $color-bg-footer: #2963a3;
 
 $color-line: #c1c5cd;
 $color-line-teg: #333333;
+$color-line-card: #dedede;
+
 
 //  для форм
 $color-form-bg: rgba(157, 157, 157, 0.2);
