--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -1,11 +1,24 @@
 .blog__title {
   margin-bottom: 24px;
+  padding-bottom: 59px;
 
   @include media-mobile3 {
     margin-bottom: 32px;
   }
 }
 
-.blog__list-tags {
-  margin-bottom: 24px;
+// .blog__list-tags {
+// }
+
+.blog__list {
+  @include list-reset;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+  margin-bottom: 28px;
+}
+
+.blog__button {
+  margin: 0 auto;
 }
