--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,5 @@
 @import "./blocks/header.scss";
 @import "./blocks/blog.scss";
 @import "./blocks/tags.scss";
+@import "./blocks/card.scss";
+@import "./blocks/button.scss";
