гамбургер почти готов

--- a/source/sass/base/fonts-styles.scss
+++ b/source/sass/base/fonts-styles.scss
@@ -46,7 +46,7 @@
   text-decoration: none;
 }
 
-.text-btn-psih {
+.text-btn-psych {
   @include font ($size: 16px, $line-height: 120%, $weight: 600, $color: $color-btn-txt);
 }
 
