--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,4 +6,13 @@
   width: 182px;
   border-radius: 4px;
   border: none;
+
+  &--psych {
+    width: fit-content;
+    padding: 14px 20px;
+    // margin: 0 25px;
+    background-color: $color-btn-bg-light;
+  }
+
 }
+
