--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,8 +10,8 @@
 @import "./base/container.scss";
 @import "./base/page.scss";
 
-// @import "./base/visible.scss";
-// @import "./base/no-js.scss";
+@import "./base/visible.scss";
+@import "./base/no-js.scss";
 
 // BLOCKS
 @import "./blocks/header.scss";
@@ -23,3 +23,4 @@
 @import "./blocks/social.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/breadcrumbs.scss";
+@import "./blocks/hamburger.scss";
