--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -63,6 +63,9 @@
 .header__item {
   padding-bottom: 5px;
   border-bottom: 1px solid $color-line;
+  @include media-tablet {
+    border-bottom: none;
+  }
 }
 
 .header__button {
