--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -18,6 +18,16 @@
   padding-bottom: 20px;
   border-bottom: 2px solid $color-line-footer;
 
+  @include media-mobile3 {
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 27px;
+  }
+ 
+  @include media-tablet {
+    padding-bottom: 24px;
+  }
+  
 }
 
 .footer__list {
@@ -29,12 +39,40 @@
 
 .footer__form {
   margin-bottom: 5px;
+
+  @include media-mobile3 {
+    width: 450px;
+    margin-bottom: 0;
+  }
+
+  @include media-tablet {
+    margin-right: 21px;
+  }
+
+  @include media-desktop {
+    margin-right: 92px;
+  }
 }
 
 .footer__wrapp-nav {
   display: flex;
   justify-content: space-between;
   margin-bottom: 23px;
+
+  @include media-mobile3 {
+    width: 247px;
+    margin-right: 31px;
+    margin-bottom: 26px;
+  }
+
+  @include media-tablet {
+    margin-right: 21px;
+  } 
+
+  @include media-desktop {
+    margin-right: 92px;
+  } 
+  
 }
 
 .footer__field {
@@ -63,6 +101,11 @@
   flex-direction: column;
   gap: 24px;
   margin-top: 20px;
+
+  @include media-mobile3 {
+    flex-direction: row;
+    gap: 48px;
+  }
 }
 
 .footer__btn {
@@ -76,7 +119,7 @@
     border: none;
     border-radius: 0 4px 4px 0;
     padding: 0;
-    background-image:  url(../../img/icons/icon_email.svg);
+    background-image: url(../../img/icons/icon_email.svg);
     background-position: center;
     background-repeat: no-repeat;
     // background-size: 24px 24px;
