разметка второй стр

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -20,8 +20,8 @@ $color-btn-txt: #03b2a5;
 
 //  для фонов
 
-$color-bg-base: #eff5fb;
-$color-bg-footer: #2963a3;
+$color-bg-light: #eff5fb;
+$color-bg-base: #2963a3;
 $color-bg-teg: rgba(255, 255, 255, 0.7);
 
 
