--- a/source/sass/base/fonts-styles.scss
+++ b/source/sass/base/fonts-styles.scss
@@ -19,6 +19,10 @@
 
 .text-base {
   @include font ($size: 14px, $line-height: 20px);
+
+  &--color {
+  color: $color-bg-base;  
+  }
 }
 
 .text-mini {
