--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding-top: 35px;
   padding-bottom: 37px;
-  background-color: $color-bg-footer;
+  background-color: $color-bg-base;
   color: $color-white;
 
   @include media-mobile3 {
@@ -108,6 +108,7 @@
 
 .footer__btn {
   display: none;
+  cursor: pointer;
 
   @include media-mobile2 {
     display: inline-block;
