--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -4,10 +4,10 @@
   width: 32px;
   height: 32px;
   border-radius: 50%;
-  background-color: $color-bg-base;
+  background-color: $color-bg-light;
 
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
