--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -10,6 +10,7 @@ $color-white: #ffffff;
 //  для текста
 $color-text-base: #333333;
 $color-text-light: #494949;
+$color-text-signature: #868686;
 
 
 //  для кнопок
@@ -23,6 +24,7 @@ $color-btn-txt: #03b2a5;
 $color-bg-light: #eff5fb;
 $color-bg-base: #2963a3;
 $color-bg-teg: rgba(255, 255, 255, 0.7);
+$color-bg-blockquote-1: #e3f7fe;
 
 
 //  для линий
