--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,5 @@
 @import "./blocks/icon.scss";
 @import "./blocks/breadcrumbs.scss";
 @import "./blocks/hamburger.scss";
+@import "./blocks/article.scss";
+@import "./blocks/blockquote.scss";
