--- a/source/sass/blocks/breadcrumbs.scss
+++ b/source/sass/blocks/breadcrumbs.scss
@@ -2,6 +2,31 @@
   @include list-reset;
   display: flex;
   gap: 4px;
+  margin-bottom: 24px;
+
+  &--article {
+    margin-bottom: 32px;
+  }
+
+  @include media-mobile2 {
+    margin-bottom: 32px;
+  }
+
+  @include media-mobile3 {
+    margin-bottom: 40px;
+
+  }
+
+  @include media-tablet {
+    &--article {
+      margin-bottom: 54px;
+    }
+  }
+
+  @include media-desktop {
+    margin-bottom: 30px;
+
+  }
 }
 
 .breadcrumbs__item {
